SubBt/force-app/main/default/objects/Application_Configuration__c/Application_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings used to configure the application.</description>
    <label>BT Application Configuration</label>
</CustomObject>