SubBt/force-app/main/default/objects/Application_Configuration__c/fields/Configured_Value__c.field-meta.xml
<CustomField>
    <fullName>Configured_Value__c</fullName>
    <description>Value of a application configuration property.</description>
    <label>Configured Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>