SubBt/force-app/main/default/objects/Application_Configuration__c/fields/Display_Layout__c.field-meta.xml
<CustomField>
    <fullName>Display_Layout__c</fullName>
    <description>Display Layout determines how the property value is displayed for editing. It is is one of Checkbox, Radio or SImple Text.</description>
    <inlineHelpText>Valid values are Checkbox, Radio and Simple Text.</inlineHelpText>
    <label>Display Layout</label>
    <length>15</length>
    <type>Text</type>
</CustomField>